k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: article-monster
  labels:
    name: article-monster
    environment: production
